<resources>
    <string name="app_name">kronon_android_okuno</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="top_view_title">予算管理システム</string>
    <string name="top_view_subtitle">〜くろのん〜</string>
    <string name="character_1">くろのん</string>
    <string name="character_2">すたっち</string>
    <string name="start">スタート</string>
    <string name="start_button">スタートボタン</string>
    <string name="content_description">画像</string>
    <string name="content_description_button">ボタン</string>
    <string name="login_title">〜くろのん〜</string>
    <string name="under_text">アカウントをお持ちでない場合　<u>新規登録</u></string>
    <string name="login_button">ログイン</string>
    <string name="title_create_new_account">アカウント作成</string>
    <string name="upper_text">表示名は日本語で15文字以内\nパスワードは半角英数字で8〜20文字\n大文字・小文字・数字を必ず使用して\n設定してね。</string>
    <string name="hint_name">表示名</string>
    <string name="hint_mail">メールアドレス</string>
    <string name="hint_pass">パスワード</string>
    <string name="hint_confpass">パスワード確認</string>
    <string name="create_new_account_under_text">ログインアカウントがある？　<u>ログイン</u></string>
    <string name="create_new_account">新規登録</string>
    <string name="title_input_schedule">予定登録</string>
    <string name="title_edit_schedule">予定修正</string>
    <string name="hint_title">タイトル</string>
    <string name="hint_date">2020/03/03</string>
    <string name="hint_start_time">9:00</string>
    <string name="hint_end_time">10:00</string>
    <string name="hint_content">内容を記入</string>
    <string name="content">内容</string>
    <string name="title_date">日付</string>
    <string name="title_start_time">開始時間</string>
    <string name="title_end_time">終了時間</string>
    <string name="button_ok">OK!</string>
    <string name="content_description_back_button">戻るボタン</string>
    <string name="content_description_icon_schedule">カレンダーアイコン</string>
    <string name="text_title">外部設計レビュー</string>
    <string name="text_date">2020/7/11</string>
    <string name="text_start_time">11:00</string>
    <string name="text_end_time">12:00</string>
    <string name="text_content">阿部さんの外部設計レビュー</string>
    <string name="title_content">内容</string>
    <string name="content_description_button_back">戻るボタン</string>
    <string name="title_detail_schedule">予定詳細</string>
    <string name="text_name">名前：藤本</string>
    <string name="text_place">作業（オフィス）</string>
    <string name="text_date_time">2020/07/11（月）　11:00~12:00</string>
    <string name="button_edit">修正</string>
    <string name="button_delete">削除</string>
    <string name="content_description_blackboard">黒板</string>
    <string name="content_description_icon_calendar">カレンダーアイコン</string>
    <string name="content_description_icon_edit">修正アイコン</string>
    <string name="content_description_icon_delete">削除アイコン</string>
    <string name="title_activity_bottom_nabigation">MainActivity</string>
    <string name="title_calendar">カレンダー</string>
    <string name="title_plane_sheet">予定表</string>
    <string name="title_account">アカウント</string>
    <string name="text_mail">hujimoto@mail.com</string>
    <string name="button_logout">ログアウト</string>
    <string name="content_description_icon_account">アカウントアイコン</string>
    <string name="content_description_icon_user">ユーザーアイコン</string>
    <string name="content_description_icon_logout">ログアウトアイコン</string>
    <string name="content_description_button_input_schedule">予定登録ボタン</string>
    <string name="top_text">おはよう🌞今日は水曜日、折り返しだよ。今日も1日がんばろうね！</string>
</resources>