<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF7F0"
    tools:context=".MainActivity">

    <!-- ツールバーをセット （androidx） -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_edit_schedule"
            android:textColor="#5C5A5A"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent " />

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:text="@string/text_title"
        android:textColor="#5C5A5A"
        android:textColorHint="#80515C6F"
        android:textSize="15sp"
        android:theme="@style/EditTextColorControl"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintWidth_max="400dp"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:text="@string/text_date"
        android:textColor="#5C5A5A"
        android:textColorHint="#80515C6F"
        android:textSize="15sp"
        android:theme="@style/EditTextColorControl"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintWidth_max="400dp"/>

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/hint_start_time"
        android:inputType="time"
        android:text="@string/text_start_time"
        android:textColor="#5C5A5A"
        android:textColorHint="#80515C6F"
        android:textSize="15sp"
        android:theme="@style/EditTextColorControl"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintWidth_max="400dp"/>

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/hint_end_time"
        android:inputType="time"
        android:paddingTop="15dp"
        android:text="@string/text_end_time"
        android:textColor="#5C5A5A"
        android:textColorHint="#80515C6F"
        android:textSize="15sp"
        android:theme="@style/EditTextColorControl"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        app:layout_constraintWidth_max="400dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_content"
        android:textColor="#5C5A5A"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextTime2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:background="@drawable/contentform"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:text="@string/text_content"
        android:hint="@string/hint_content"
        android:textColor="@color/black"
        android:textColorHint="#80515C6F"
        android:textSize="15sp"
        android:theme="@style/EditTextColorControl"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_max="400dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_date"
        android:textColor="#5C5A5A"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_start_time"
        android:textColor="#5C5A5A"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toTopOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_end_time"
        android:textColor="#5C5A5A"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextTime2"
        app:layout_constraintTop_toTopOf="@+id/editTextTime2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:paddingBottom="10dp"
        android:text="@string/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

</androidx.constraintlayout.widget.ConstraintLayout>