<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.kronon_android_okuno.ui.home.HomeFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_planesheet"
        android:name="com.example.kronon_android_okuno.ui.dashboard.DashboardFragment"
        android:label="@string/title_plane_sheet"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.kronon_android_okuno.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >

        <action
            android:id="@+id/action_navigation_account_to_login"
            app:destination="@+id/title_login" />
    </fragment>

    <activity
        android:id="@+id/title_login"
        android:name="com.example.kronon_android_okuno.LoginActivity"
        android:label="@string/login_title"
        tools:layout="@layout/login" />
</navigation>