<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- ツールバーをセット （androidx） -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_input_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="right"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/content_description_button_input_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_edit"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/icon_input_schedule"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_icon_calendar"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/ic_baseline_calendar_today_5c5a5a_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/title_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_calendar"
            android:textColor="#5C5A5A"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent " />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/default_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_input_schedule"
        tools:context=".CalendarActivity"
        tools:layout_editor_absoluteX="0dp">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/icon_kronon"
        android:drawableRight="@drawable/icon_kronon"
        android:gravity="center|start"
        android:ems="10"
        android:maxLines="2"
        android:text="@string/top_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_input_schedule" />

</androidx.constraintlayout.widget.ConstraintLayout>
